Bug 424873. Make GetWidgetOverflow take the new frame size as input instead of using the possibly-stale old frame size. r+sr=dbaron